Moved user-facing rendering data to new folder

--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -157,17 +157,6 @@
     <ClInclude Include="Engine\Application.h" />
     <ClInclude Include="Engine\ComponentContainer.h" />
     <ClInclude Include="Engine\GameObject.h" />
-    <ClInclude Include="Engine\Maths\Matrices\GenericMatrix.h" />
-    <ClInclude Include="Engine\Maths\Vectors\DoubleVector2.h" />
-    <ClInclude Include="Engine\Maths\Vectors\DoubleVector3.h" />
-    <ClInclude Include="Engine\Maths\Vectors\DoubleVector4.h" />
-    <ClInclude Include="Engine\Maths\Vectors\FloatVector2.h" />
-    <ClInclude Include="Engine\Maths\Vectors\FloatVector3.h" />
-    <ClInclude Include="Engine\Maths\Vectors\FloatVector4.h" />
-    <ClInclude Include="Engine\Maths\Vectors\Vector2Base.h" />
-    <ClInclude Include="Engine\Maths\Vectors\Vector3Base.h" />
-    <ClInclude Include="Engine\Maths\Vectors\Vector4Base.h" />
-    <ClInclude Include="Engine\Maths\Vectors\VectorBase.h" />
     <ClInclude Include="Engine\Object Management\ComponentContainer.h" />
     <ClInclude Include="Engine\Object Management\GameObjectContainer.h" />
     <ClInclude Include="Engine\Object Management\GlobalObjectManager.h" />
@@ -176,10 +165,6 @@
     <ClInclude Include="Engine\Object Management\ObjectContainer.h" />
     <ClInclude Include="Engine\Object Management\SafeObjRef.h" />
     <ClInclude Include="Engine\Object.h" />
-    <ClInclude Include="Engine\Rendering\IndexBufferData.h" />
-    <ClInclude Include="Engine\Rendering\Mesh.h" />
-    <ClInclude Include="Engine\Rendering\RenderingBufferDataContainer.h" />
-    <ClInclude Include="Engine\Rendering\VertexBufferData.h" />
     <ClInclude Include="Engine\SafePtr.h" />
     <ClInclude Include="Include\Exceptions\DirectXException.h" />
     <ClInclude Include="Include\Exceptions\DivideByZeroException.h" />
@@ -190,18 +175,21 @@
     <ClInclude Include="Include\Exceptions\OutOfRangeException.h" />
     <ClInclude Include="Include\Game\Color.h" />
     <ClInclude Include="Include\Game\IDebugStringReturner.h" />
+    <ClInclude Include="Include\Game\IndexBufferData.h" />
     <ClInclude Include="Include\Game\Input.h" />
     <ClInclude Include="Include\Game\IntVector2.h" />
     <ClInclude Include="Include\Game\IntVector3.h" />
     <ClInclude Include="Include\Game\IntVector4.h" />
     <ClInclude Include="Include\Game\Key.h" />
     <ClInclude Include="Include\Game\Math.h" />
+    <ClInclude Include="Include\Game\Mesh.h" />
     <ClInclude Include="Include\Game\Output.h" />
     <ClInclude Include="Include\Game\Quaternion.h" />
     <ClInclude Include="Include\Game\Time\Time.h" />
     <ClInclude Include="Include\Game\Vector2.h" />
     <ClInclude Include="Include\Game\Vector3.h" />
     <ClInclude Include="Include\Game\Vector4.h" />
+    <ClInclude Include="Include\Game\VertexBufferData.h" />
     <ClInclude Include="Include\Maths\DoubleVector2.h" />
     <ClInclude Include="Include\Maths\DoubleVector3.h" />
     <ClInclude Include="Include\Maths\DoubleVector4.h" />
@@ -224,6 +212,7 @@
     <ClInclude Include="Source\DirectX\VertexBuffer.h" />
     <ClInclude Include="Source\DirectX\VertexBufferConverter.h" />
     <ClInclude Include="Source\Formatting\NumberFormatting.h" />
+    <ClInclude Include="Source\Game\Rendering\RenderingBufferDataContainer.h" />
     <ClInclude Include="Source\Windows\GameWindow.h" />
     <ClInclude Include="Source\Windows\IWindow.h" />
     <ClInclude Include="Source\Windows\Window.h" />
@@ -235,7 +224,6 @@
     <ClCompile Include="Engine\GameObject.cpp" />
     <ClCompile Include="Engine\Object Management\GlobalObjectManager.cpp" />
     <ClCompile Include="Engine\Object.cpp" />
-    <ClCompile Include="Engine\Rendering\Mesh.cpp" />
     <ClCompile Include="Source\DirectX\DepthBuffer.cpp" />
     <ClCompile Include="Source\DirectX\GraphicsDevice.cpp" />
     <ClCompile Include="Source\DirectX\IndexBuffer.cpp" />
@@ -251,6 +239,7 @@
     <ClCompile Include="Source\Game\Math.cpp" />
     <ClCompile Include="Source\Game\Output.cpp" />
     <ClCompile Include="Source\Game\Quaternion.cpp" />
+    <ClCompile Include="Source\Game\Rendering\Mesh.cpp" />
     <ClCompile Include="Source\Game\Time.cpp" />
     <ClCompile Include="Source\Windows\GameWindow.cpp" />
     <ClCompile Include="Source\Windows\Window.cpp" />
