--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -155,17 +155,6 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Application.h" />
-    <ClInclude Include="Engine\ComponentContainer.h" />
-    <ClInclude Include="Engine\GameObject.h" />
-    <ClInclude Include="Engine\Object Management\ComponentContainer.h" />
-    <ClInclude Include="Engine\Object Management\GameObjectContainer.h" />
-    <ClInclude Include="Engine\Object Management\GlobalObjectManager.h" />
-    <ClInclude Include="Engine\Object Management\IComponent.h" />
-    <ClInclude Include="Engine\Object Management\IObject.h" />
-    <ClInclude Include="Engine\Object Management\ObjectContainer.h" />
-    <ClInclude Include="Engine\Object Management\SafeObjRef.h" />
-    <ClInclude Include="Engine\Object.h" />
-    <ClInclude Include="Engine\SafePtr.h" />
     <ClInclude Include="Include\Exceptions\DirectXException.h" />
     <ClInclude Include="Include\Exceptions\DivideByZeroException.h" />
     <ClInclude Include="Include\Exceptions\Exception.h" />
@@ -174,6 +163,7 @@
     <ClInclude Include="Include\Exceptions\NullReferenceException.h" />
     <ClInclude Include="Include\Exceptions\OutOfRangeException.h" />
     <ClInclude Include="Include\Game\Color.h" />
+    <ClInclude Include="Include\Game\GameObject.h" />
     <ClInclude Include="Include\Game\IDebugStringReturner.h" />
     <ClInclude Include="Include\Game\IndexBufferData.h" />
     <ClInclude Include="Include\Game\Input.h" />
@@ -183,8 +173,10 @@
     <ClInclude Include="Include\Game\Key.h" />
     <ClInclude Include="Include\Game\Math.h" />
     <ClInclude Include="Include\Game\Mesh.h" />
+    <ClInclude Include="Include\Game\Object.h" />
     <ClInclude Include="Include\Game\Output.h" />
     <ClInclude Include="Include\Game\Quaternion.h" />
+    <ClInclude Include="Include\Game\SafePtr.h" />
     <ClInclude Include="Include\Game\Time\Time.h" />
     <ClInclude Include="Include\Game\Vector2.h" />
     <ClInclude Include="Include\Game\Vector3.h" />
@@ -212,6 +204,13 @@
     <ClInclude Include="Source\DirectX\VertexBuffer.h" />
     <ClInclude Include="Source\DirectX\VertexBufferConverter.h" />
     <ClInclude Include="Source\Formatting\NumberFormatting.h" />
+    <ClInclude Include="Source\Game\Object Management\ComponentContainer.h" />
+    <ClInclude Include="Source\Game\Object Management\GameObjectContainer.h" />
+    <ClInclude Include="Source\Game\Object Management\GlobalObjectManager.h" />
+    <ClInclude Include="Source\Game\Object Management\IComponent.h" />
+    <ClInclude Include="Source\Game\Object Management\IObject.h" />
+    <ClInclude Include="Source\Game\Object Management\ObjectContainer.h" />
+    <ClInclude Include="Source\Game\Object Management\SafeObjRef.h" />
     <ClInclude Include="Source\Game\Rendering\RenderingBufferDataContainer.h" />
     <ClInclude Include="Source\Windows\GameWindow.h" />
     <ClInclude Include="Source\Windows\IWindow.h" />
@@ -220,10 +219,6 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Application.cpp" />
-    <ClCompile Include="Engine\ComponentContainer.cpp" />
-    <ClCompile Include="Engine\GameObject.cpp" />
-    <ClCompile Include="Engine\Object Management\GlobalObjectManager.cpp" />
-    <ClCompile Include="Engine\Object.cpp" />
     <ClCompile Include="Source\DirectX\DepthBuffer.cpp" />
     <ClCompile Include="Source\DirectX\GraphicsDevice.cpp" />
     <ClCompile Include="Source\DirectX\IndexBuffer.cpp" />
@@ -237,6 +232,10 @@
     <ClCompile Include="Source\Game\Color.cpp" />
     <ClCompile Include="Source\Game\Input.cpp" />
     <ClCompile Include="Source\Game\Math.cpp" />
+    <ClCompile Include="Source\Game\Object Management\ComponentContainer.cpp" />
+    <ClCompile Include="Source\Game\Object Management\GameObject.cpp" />
+    <ClCompile Include="Source\Game\Object Management\GlobalObjectManager.cpp" />
+    <ClCompile Include="Source\Game\Object Management\Object.cpp" />
     <ClCompile Include="Source\Game\Output.cpp" />
     <ClCompile Include="Source\Game\Quaternion.cpp" />
     <ClCompile Include="Source\Game\Rendering\Mesh.cpp" />
