--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
@@ -5,12 +5,6 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
-    <Filter Include="Source OLD">
-      <UniqueIdentifier>{fe3e6bee-cf61-4b1f-abd4-318da4f39cd2}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Source OLD\Engine">
-      <UniqueIdentifier>{f682211d-fbff-4480-8525-4be35f72752f}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Source">
       <UniqueIdentifier>{96fe5c37-550a-424a-b59f-f2911cb35739}</UniqueIdentifier>
     </Filter>
@@ -49,9 +43,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Engine\Application.h">
-      <Filter>Source OLD\Engine</Filter>
-    </ClInclude>
     <ClInclude Include="Source\Windows\GameWindow.h">
       <Filter>Source\Windows</Filter>
     </ClInclude>
@@ -235,11 +226,11 @@
     <ClInclude Include="Source\Game\Object Management\SafeObjRef.h">
       <Filter>Source\Game\Object Management</Filter>
     </ClInclude>
+    <ClInclude Include="Include\Game\Application.h">
+      <Filter>Include\Game</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="Engine\Application.cpp">
-      <Filter>Source OLD\Engine</Filter>
-    </ClCompile>
     <ClCompile Include="Source\Windows\GameWindow.cpp">
       <Filter>Source\Windows</Filter>
     </ClCompile>
@@ -311,6 +302,9 @@
     </ClCompile>
     <ClCompile Include="Source\Game\Object Management\Object.cpp">
       <Filter>Source\Game\Object Management</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Game\Application.cpp">
+      <Filter>Source\Game</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
