--- a/UnitTests/UnitTests.vcxproj
+++ b/UnitTests/UnitTests.vcxproj
@@ -41,6 +41,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Engine\Object Management\ObjectContainer.cpp" />
+    <ClCompile Include="Engine\Object Management\ObjectCounter.cpp" />
     <ClCompile Include="Engine\Object Management\SafeObjRef.cpp" />
     <ClCompile Include="Engine\Object Management\SafePtr.cpp" />
     <ClCompile Include="Math\ArbitraryVector.cpp" />
