--- a/UnitTests/UnitTests.vcxproj.filters
+++ b/UnitTests/UnitTests.vcxproj.filters
@@ -53,6 +53,9 @@
     <ClCompile Include="Engine\Object Management\ObjectContainer.cpp">
       <Filter>Engine\Object Management</Filter>
     </ClCompile>
+    <ClCompile Include="Engine\Object Management\ObjectCounter.cpp">
+      <Filter>Engine\Object Management</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h" />
