--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj.filters
@@ -47,6 +47,9 @@
     <Filter Include="Source\Utility">
       <UniqueIdentifier>{6d976d1e-fbf6-4abe-9ff3-66041c0cbe82}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source\Maths">
+      <UniqueIdentifier>{f14fb915-7f81-473d-987b-3fb797d8d2a3}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Source\Windows\GameWindow.h">
@@ -347,6 +350,9 @@
     </ClCompile>
     <ClCompile Include="Source\Utility\Path.cpp">
       <Filter>Source\Utility</Filter>
+    </ClCompile>
+    <ClCompile Include="Source\Maths\DoubleVector3.cpp">
+      <Filter>Source\Maths</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
