Moved math base classes into source

--- a/ArtemisEngineCore/ArtemisEngineCore.vcxproj
+++ b/ArtemisEngineCore/ArtemisEngineCore.vcxproj
@@ -182,17 +182,6 @@
     <ClInclude Include="Include\Game\Vector3.h" />
     <ClInclude Include="Include\Game\Vector4.h" />
     <ClInclude Include="Include\Game\VertexBufferData.h" />
-    <ClInclude Include="Include\Maths\DoubleVector2.h" />
-    <ClInclude Include="Include\Maths\DoubleVector3.h" />
-    <ClInclude Include="Include\Maths\DoubleVector4.h" />
-    <ClInclude Include="Include\Maths\FloatVector2.h" />
-    <ClInclude Include="Include\Maths\FloatVector3.h" />
-    <ClInclude Include="Include\Maths\FloatVector4.h" />
-    <ClInclude Include="Include\Maths\GenericMatrix.h" />
-    <ClInclude Include="Include\Maths\Vector2Base.h" />
-    <ClInclude Include="Include\Maths\Vector3Base.h" />
-    <ClInclude Include="Include\Maths\Vector4Base.h" />
-    <ClInclude Include="Include\Maths\VectorBase.h" />
     <ClInclude Include="Include\Utility\Directory.h" />
     <ClInclude Include="Include\Utility\Path.h" />
     <ClInclude Include="Source\DirectX\DepthBuffer.h" />
@@ -218,6 +207,17 @@
     <ClInclude Include="Source\Game\Object Management\ObjectCounter.h" />
     <ClInclude Include="Source\Game\Object Management\SafeObjRef.h" />
     <ClInclude Include="Source\Game\Rendering\RenderingBufferDataContainer.h" />
+    <ClInclude Include="Source\Maths\DoubleVector2.h" />
+    <ClInclude Include="Source\Maths\DoubleVector3.h" />
+    <ClInclude Include="Source\Maths\DoubleVector4.h" />
+    <ClInclude Include="Source\Maths\FloatVector2.h" />
+    <ClInclude Include="Source\Maths\FloatVector3.h" />
+    <ClInclude Include="Source\Maths\FloatVector4.h" />
+    <ClInclude Include="Source\Maths\GenericMatrix.h" />
+    <ClInclude Include="Source\Maths\Vector2Base.h" />
+    <ClInclude Include="Source\Maths\Vector3Base.h" />
+    <ClInclude Include="Source\Maths\Vector4Base.h" />
+    <ClInclude Include="Source\Maths\VectorBase.h" />
     <ClInclude Include="Source\Windows\GameWindow.h" />
     <ClInclude Include="Source\Windows\IWindow.h" />
     <ClInclude Include="Source\Windows\Window.h" />
